# kal

./: .gitignore  Cargo.toml  README.md  kal.config.toml
src/: backup.rs  categories.rs  db_ops.rs  main.rs
