[package]
name = "kal"
version = "1.1.1"
edition = "2021"
description = "A program for recording my Knowledge Accumulation Logs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
figment = { version = "0.10", features = ["toml"] }
inquire = "0.7.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
